syntax = "proto3";
option go_package = "./;social_network";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message PostID {
  int32 post_id = 1;
}

message PostDataRequest {
  string post_name = 1;
  string post_description = 2;
  bool security_flag = 3;
  repeated string tags = 4;
}

message PostDataResponse {
  PostID post_id = 1;
  string post_name = 2;
  string post_description = 3;
  bool security_flag = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  repeated string tags = 7;
}

message UpdatePostRequest {
  PostID post_id = 1;
  PostDataRequest post_data = 2;
}

message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPostsResponse {
  repeated PostDataResponse posts = 1;
}

service PostsService {
  rpc CreatePost(PostDataRequest) returns (google.protobuf.Empty);
  rpc DeletePost(PostID) returns (google.protobuf.Empty);
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty);
  rpc GetPost(PostID) returns (PostDataResponse);
  rpc GetPostList(ListPostsRequest) returns (ListPostsResponse);
}