syntax = "proto3";
option go_package = "./;protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package posts_service;

message PostID {
  int32 post_id = 1;
}

message PostDataRequest {
  string post_name = 1;
  string post_description = 2;
  bool security_flag = 3;
  repeated string tags = 4;
}

message PostDataResponse {
  int32 post_id = 1;
  string post_name = 2;
  string post_description = 3;
  bool security_flag = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  repeated string tags = 7;
  int32 user_id = 8;
}

message UpdatePostRequest {
  int32 post_id = 1;
  PostDataRequest post_data = 2;
}

message PaginatedListRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPostsResponse {
  repeated PostDataResponse posts = 1;
}

message PostCommentRequest {
  int32 post_id = 1;
  string comment_description = 2;
}

message CommentDataResponse {
  int32 comment_id = 1;
  string comment_description = 2;
  int32 post_id = 3;
  int32 user_id = 4;
}

message ListCommentsResponse {
  repeated CommentDataResponse comments = 1;
}

message UserID {
  int32 user_id = 1;
}

message CountResponse {
  int32 count = 1;
}

message DynamicListResponse {
  repeated DynamicResponse dynamic = 1;
}

message DynamicResponse {
  google.protobuf.Timestamp data = 1;
  CountResponse count = 2;
}

message TopTenParameter {
  string par = 1;
}

message TopTenPostsResponse {
  repeated PostID posts = 1;
}

message TopTenUsersResponse {
  repeated UserID users = 1;
}


service PostsService {
  rpc CreatePost(PostDataRequest) returns (google.protobuf.Empty);
  rpc DeletePost(PostID) returns (google.protobuf.Empty);
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty);
  rpc GetPost(PostID) returns (PostDataResponse);
  rpc GetPostList(PaginatedListRequest) returns (ListPostsResponse);
  rpc PostComment(PostCommentRequest) returns (google.protobuf.Empty);
  rpc PostLike(PostID) returns (google.protobuf.Empty);
  rpc PostView(PostID) returns (google.protobuf.Empty);
  rpc GetCommentList(PaginatedListRequest) returns (ListCommentsResponse);
}


service StatisticService {
  rpc GetViewsCount(PostID) returns (CountResponse);
  rpc GetCommentsCount(PostID) returns (CountResponse);
  rpc GetLikesCount(PostID) returns (CountResponse);
  rpc GetViewsDynamic(PostID) returns (DynamicListResponse);
  rpc GetCommentsDynamic(PostID) returns (DynamicListResponse);
  rpc GetLikesDynamic(PostID) returns (DynamicListResponse);
  rpc GetTopTenPosts(TopTenParameter) returns (TopTenPostsResponse);
  rpc GetTopTenUsers(TopTenParameter) returns (TopTenUsersResponse);
}
